--- a/src/shared/pages/loginedPage/loginedPage.scss
+++ b/src/shared/pages/loginedPage/loginedPage.scss
@@ -16,7 +16,7 @@
 
       > button::before {
         width: 13px;
-        height: 13px;
+        height: auto;
         margin-right: 20px;
         content: url(../../../assets/plusicon.png);
       }
