--- a/src/feature/auth/Auth.scss
+++ b/src/feature/auth/Auth.scss
@@ -6,7 +6,15 @@
   justify-content: space-around;
 
   .form {
-    margin-right: 120px;
+    margin-bottom: 12px;
+
+    .MuiFormControl-root {
+      margin-bottom: 20px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .formLayout {
@@ -23,6 +31,48 @@
       color: #552f7c;
       padding-bottom: 20px;
       border-bottom: 1px solid #eeecf1;
+    }
+
+    .submit {
+      cursor: pointer;
+      margin-top: 12px;
+      margin-bottom: 30px;
+      border: none;
+      outline: none;
+      width: 100%;
+      height: 50px;
+      color: #ffffff;
+      font-size: 16px;
+      font-weight: bold;
+      transition: all 0.3s;
+      border-radius: 12px;
+
+      &.login {
+        background-color: #552f7c;
+
+        &:hover {
+          background-color: darken(#552f7c, 8);
+        }
+      }
+
+      &.register {
+        background-color: #06c97e;
+
+        &:hover {
+          background-color: darken(#06c97e, 8);
+        }
+      }
+    }
+
+    .other-option {
+      text-align: center;
+      color: #4b4b4b;
+      font-weight: bold;
+
+      a {
+        color: #552f7c;
+        text-decoration: none;
+      }
     }
   }
 }
