terms / privacy policy page add

--- a/src/core/footer/footer.scss
+++ b/src/core/footer/footer.scss
@@ -27,6 +27,7 @@
           font-size: 18px;
           color: #707070;
           text-decoration: none;
+          text-transform: capitalize;
         }
       }
     }
