--- a/src/feature/dashboard/Dashboard.scss
+++ b/src/feature/dashboard/Dashboard.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     .newpost {
       display: grid;
-      grid-template-columns: 268px 268px 268px auto 170px;
+      grid-template-columns: 200px 200px 200px 200px auto 170px;
       gap: 20px;
       width: 100%;
 
@@ -54,6 +54,25 @@
             background-color: #ffab02;
           }
         }
+        &:nth-child(4) {
+          position: relative;
+          background-color: #4b4b4b;
+          &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 10px;
+            font-size: 10px;
+          }
+
+          &:hover {
+            background-color: #4b4b4b94;
+
+            &::after {
+              animation: animate infinite 2s;
+            }
+          }
+        }
       }
     }
   }
@@ -87,7 +106,7 @@
     }
 
     &::after {
-      content: '';
+      content: "";
       clear: both;
     }
   }
@@ -179,5 +198,40 @@
     grid-template-columns: auto auto auto auto;
     gap: 20px;
     margin-top: 76px;
+  }
+}
+@keyframes animate {
+  0% {
+    content: "C";
+  }
+  10% {
+    content: "Co";
+  }
+  20% {
+    content: "Com";
+  }
+  30% {
+    content: "Comi";
+  }
+  40% {
+    content: "Comin";
+  }
+  50% {
+    content: "Coming";
+  }
+  60% {
+    content: "Coming S";
+  }
+  70% {
+    content: "Coming So";
+  }
+  80% {
+    content: "Coming Soo";
+  }
+  90% {
+    content: "Coming Soon";
+  }
+  100% {
+    content: "Coming Soon!";
   }
 }
