--- a/src/core/layout/mainLayout.scss
+++ b/src/core/layout/mainLayout.scss
@@ -2,5 +2,9 @@
   #header,
   #footer {
     padding: 36px 50px;
+
+    @media screen and (max-width: 1060px) {
+      padding: 20px 10px;
+    }
   }
 }
