--- a/src/feature/main/Main.scss
+++ b/src/feature/main/Main.scss
@@ -7,10 +7,21 @@
   @media screen and (max-width: 1600px) {
     padding: 200px 50px;
   }
+  @media screen and (max-width: 1060px) {
+    flex-direction: column;
+    align-items: center;
+  }
   .leftContent {
     display: flex;
     flex-direction: column;
     margin-right: 250px;
+    z-index: 3;
+    @media screen and (max-width: 1060px) {
+      margin-bottom: 50px;
+      text-align: center;
+      margin-right: 0;
+      align-items: center;
+    }
     span {
       font-weight: bold;
       line-height: 59px;
@@ -65,6 +76,7 @@
       background-color: rgba(185, 40, 245, 0.3);
       backdrop-filter: blur(30px) brightness(115%);
       z-index: 2;
+      max-width: 250px;
 
       &::before {
         content: url(../../assets/svg/check.svg);
