--- a/src/core/footer/footer.scss
+++ b/src/core/footer/footer.scss
@@ -5,6 +5,7 @@
   background-color: #49365d;
   @media screen and (max-width: 800px) {
     flex-direction: column;
+    text-align: center;
   }
   .icons {
     display: flex;
