--- a/src/feature/dashboard/Dashboard.scss
+++ b/src/feature/dashboard/Dashboard.scss
@@ -97,6 +97,9 @@
     @media screen and (max-width: 800px) {
       grid-column: span 1;
     }
+    @media screen and (max-width: 500px) {
+      grid-column: span 2;
+    }
 
     input {
       background-color: #f5f3f6;
