--- a/src/feature/dashboard/Dashboard.scss
+++ b/src/feature/dashboard/Dashboard.scss
@@ -25,13 +25,15 @@
         grid-template-columns: 1fr 1fr;
       }
 
-      > button::before {
+      > a::before {
         width: 13px;
         height: auto;
         margin-right: 20px;
         content: url(/assets/images/plusicon.png);
       }
-      > button {
+
+      > a {
+        text-decoration: none;
         font-size: 16px;
         font-weight: bold;
         padding: 20px 0;
@@ -69,7 +71,7 @@
           position: relative;
           background-color: #4b4b4b;
           &::after {
-            content: "";
+            content: '';
             position: absolute;
             top: 0;
             right: 10px;
@@ -126,7 +128,7 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       clear: both;
     }
   }
@@ -239,36 +241,36 @@
 }
 @keyframes animate {
   0% {
-    content: "C";
+    content: 'C';
   }
   10% {
-    content: "Co";
+    content: 'Co';
   }
   20% {
-    content: "Com";
+    content: 'Com';
   }
   30% {
-    content: "Comi";
+    content: 'Comi';
   }
   40% {
-    content: "Comin";
+    content: 'Comin';
   }
   50% {
-    content: "Coming";
+    content: 'Coming';
   }
   60% {
-    content: "Coming S";
+    content: 'Coming S';
   }
   70% {
-    content: "Coming So";
+    content: 'Coming So';
   }
   80% {
-    content: "Coming Soo";
+    content: 'Coming Soo';
   }
   90% {
-    content: "Coming Soon";
+    content: 'Coming Soon';
   }
   100% {
-    content: "Coming Soon!";
+    content: 'Coming Soon!';
   }
 }
