--- a/src/core/header/header.scss
+++ b/src/core/header/header.scss
@@ -24,7 +24,7 @@
     outline: 0px;
     border: 0;
     background: none;
-    font-family: "Roboto";
+    font-family: 'Roboto';
     font-weight: 400;
     font-size: 16px;
     color: #ffffff;
@@ -35,29 +35,31 @@
     }
   }
   .loginControl {
-    div {
-      display: flex;
-      align-items: center;
-      a {
-        font-size: 16px;
-        font-weight: bold;
-        line-height: 20px;
-        padding: 20px;
-        border: none;
-        outline: none;
-        background-color: #ffffff;
-        border-radius: 12px;
-        color: #552f7c;
-        text-decoration: none;
-      }
-      .logbtn {
-        background-color: transparent;
-        color: #06c97e;
-        margin-right: 40px;
-        padding: 0;
-        @media screen and (max-width: 1060px) {
-          margin-right: 20px;
-        }
+    display: flex;
+    align-items: center;
+
+    a,
+    button {
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      line-height: 20px;
+      padding: 20px;
+      border: none;
+      outline: none;
+      background-color: #ffffff;
+      border-radius: 12px;
+      color: #552f7c;
+      text-decoration: none;
+    }
+
+    .logbtn {
+      background-color: transparent;
+      color: #06c97e;
+      margin-right: 40px;
+      padding: 0;
+      @media screen and (max-width: 1060px) {
+        margin-right: 20px;
       }
     }
   }
