--- a/src/feature/dashboard/edit/Edit.scss
+++ b/src/feature/dashboard/edit/Edit.scss
@@ -1,13 +1,22 @@
 #edit {
+  padding: 100px 50px 90px;
+
   .titleControl {
     &::after {
-      content: "";
+      content: '';
       border-top: 1px solid #f5f3f6;
       width: 100%;
       display: block;
       padding: 40px 0;
       margin-top: 40px;
     }
+
+    h2 {
+      color: #4b4b4b;
+      font-size: 32px;
+      font-weight: bold;
+    }
+
     .form {
       display: flex;
       justify-content: space-between;
@@ -46,7 +55,7 @@
           padding: 20px;
           .imgUpload {
             &::after {
-              content: "";
+              content: '';
               border-bottom: 1px solid #f5f3f6;
               width: 100%;
               display: block;
@@ -121,7 +130,7 @@
 
           h2 {
             margin-bottom: 11px;
-            font-size: 18ps;
+            font-size: 18px;
           }
 
           .keywordInput {
@@ -151,7 +160,7 @@
             }
 
             &::after {
-              content: "";
+              content: '';
               clear: both;
             }
           }
