--- a/src/main.scss
+++ b/src/main.scss
@@ -4,3 +4,19 @@ body {
   font-family: 'Halvetica';
   font-weight: 500;
 }
+
+html,
+body,
+#root,
+#container {
+  height: 100%;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+
+  main {
+    flex: 1;
+  }
+}
