--- a/src/shared/card/card.scss
+++ b/src/shared/card/card.scss
@@ -66,7 +66,9 @@
     }
     .buttons {
       display: flex;
-      button {
+      button,
+      a {
+        text-decoration: none;
         border: none;
         background-color: #f5f3f6;
         border-radius: 12px;
