--- a/src/feature/main/Main.scss
+++ b/src/feature/main/Main.scss
@@ -1,14 +1,16 @@
 #mainpage {
   background-color: #552f7c;
   display: flex;
-  position: relative;
+  flex-direction: column;
 
   @media screen and (max-width: 1060px) {
-    flex-direction: column;
     align-items: center;
   }
 
   .section-1 {
+    position: relative;
+    width: 100%;
+
     .leftContent {
       display: flex;
       flex-direction: column;
@@ -95,11 +97,131 @@
       height: 100%;
     }
   }
+  .section-2 {
+    background-color: #f5f3f6;
+    width: 100%;
+    .leftContent {
+      h2 {
+        font-size: 50px;
+        font-weight: bold;
+        max-width: 400px;
+        line-height: 59px;
+        color: #06c97e;
+        margin-bottom: 45px;
+      }
+      p {
+        max-width: 460px;
+        color: #4b4b4b;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+      }
+    }
+    .img-wrapper {
+      display: flex;
+
+      @media screen and (max-width: 1060px) {
+        flex-direction: column;
+      }
+
+      img {
+        width: 50%;
+        &:nth-child(1) {
+          margin-right: 20px;
+          margin-left: 20px;
+
+          @media screen and (max-width: 1060px) {
+            margin-right: 0;
+            margin-bottom: 20px;
+            margin-top: 20px;
+            margin-left: 0;
+            width: 100%;
+          }
+        }
+        @media screen and (max-width: 1060px) {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .section-3 {
+    background-color: #ffffff;
+    width: 100%;
+    .leftContent {
+      h2 {
+        font-size: 50px;
+        font-weight: bold;
+        max-width: 400px;
+        line-height: 59px;
+        color: #552f7c;
+        margin-bottom: 45px;
+      }
+      p {
+        max-width: 460px;
+        color: #4b4b4b;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+      }
+    }
+    .img-wrapper {
+      display: flex;
+      justify-content: end;
+
+      img {
+        width: 70%;
+
+        @media screen and (max-width: 1060px) {
+          width: 100%;
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+  .section-4 {
+    background-color: #f5f3f6;
+    width: 100%;
+    .leftContent {
+      h2 {
+        font-size: 50px;
+        font-weight: bold;
+        max-width: 520px;
+        line-height: 59px;
+        color: #8910c5;
+        margin-bottom: 45px;
+      }
+      p {
+        max-width: 460px;
+        color: #4b4b4b;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+      }
+    }
+    .img-wrapper {
+      display: flex;
+      justify-content: end;
+
+      img {
+        width: 100%;
+
+        @media screen and (max-width: 1060px) {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
   .container {
-    padding: 225px 50px 317px 50px;
+    padding: 160px 200px 150px 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     @media screen and (max-width: 1600px) {
       padding: 200px 50px;
+    }
+    @media screen and (max-width: 1060px) {
+      flex-direction: column;
     }
   }
 }
