--- a/src/feature/main/Main.scss
+++ b/src/feature/main/Main.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
 
-  @media screen and (max-width: 1360px) {
+  @media screen and (max-width: 999px) {
     align-items: center;
   }
 
@@ -16,7 +16,7 @@
       flex-direction: column;
       margin-right: 250px;
       z-index: 3;
-      @media screen and (max-width: 1360px) {
+      @media screen and (max-width: 999px) {
         margin-bottom: 50px;
         text-align: center;
         margin-right: 0;
@@ -38,7 +38,7 @@
         color: #ffffff;
         font-size: 18px;
         line-height: 22px;
-        max-width: 405px;
+        max-width: 90%;
         margin: 44px 0;
       }
       a {
@@ -104,7 +104,7 @@
       h2 {
         font-size: 50px;
         font-weight: bold;
-        max-width: 400px;
+        max-width: 90%;
         line-height: 59px;
         color: #06c97e;
         margin-bottom: 45px;
@@ -120,7 +120,7 @@
     .img-wrapper {
       display: flex;
 
-      @media screen and (max-width: 1360px) {
+      @media screen and (max-width: 999px) {
         flex-direction: column;
       }
 
@@ -130,7 +130,7 @@
           margin-right: 20px;
           margin-left: 20px;
 
-          @media screen and (max-width: 1360px) {
+          @media screen and (max-width: 999px) {
             margin-right: 0;
             margin-bottom: 20px;
             margin-top: 20px;
@@ -138,7 +138,7 @@
             width: 100%;
           }
         }
-        @media screen and (max-width: 1360px) {
+        @media screen and (max-width: 999px) {
           width: 100%;
         }
       }
@@ -151,7 +151,7 @@
       h2 {
         font-size: 50px;
         font-weight: bold;
-        max-width: 400px;
+        max-width: 80%;
         line-height: 59px;
         color: #552f7c;
         margin-bottom: 45px;
@@ -171,7 +171,7 @@
       img {
         width: 70%;
 
-        @media screen and (max-width: 1360px) {
+        @media screen and (max-width: 999px) {
           width: 100%;
           margin-top: 20px;
         }
@@ -191,7 +191,7 @@
         margin-bottom: 45px;
       }
       p {
-        max-width: 460px;
+        max-width: 80%;
         color: #4b4b4b;
         font-size: 16px;
         font-weight: 500;
@@ -203,10 +203,11 @@
       justify-content: end;
 
       img {
-        width: 100%;
+        width: 80%;
 
-        @media screen and (max-width: 1360px) {
+        @media screen and (max-width: 999px) {
           margin-top: 20px;
+          width: 100%;
         }
       }
     }
@@ -270,7 +271,7 @@
         margin-bottom: 45px;
       }
       p {
-        max-width: 460px;
+        max-width: 80%;
         color: #ffffff;
         font-size: 16px;
         font-weight: 500;
@@ -280,7 +281,7 @@
     .img-wrapper {
       display: flex;
 
-      @media screen and (max-width: 1360px) {
+      @media screen and (max-width: 999px) {
         flex-direction: column;
       }
 
@@ -298,7 +299,7 @@
     @media screen and (max-width: 1600px) {
       padding: 200px 50px;
     }
-    @media screen and (max-width: 1360px) {
+    @media screen and (max-width: 999px) {
       flex-direction: column;
     }
   }
