--- a/src/feature/dashboard/createOrEdit/CreateOrEdit.scss
+++ b/src/feature/dashboard/createOrEdit/CreateOrEdit.scss
@@ -77,7 +77,7 @@
 
   .form {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2fr 1fr;
     grid-gap: 20px;
 
     .image-form {
@@ -89,7 +89,7 @@
 
         .imgUpload {
           &::after {
-            content: "";
+            content: '';
             border-bottom: 1px solid #f5f3f6;
             width: 100%;
             display: block;
@@ -286,9 +286,9 @@
             color: #4b4b4b;
             font-weight: 600;
             resize: none;
+            height: 250px;
             min-height: 120px;
             max-height: 500px;
-            overflow-y: scroll;
           }
 
           .buttons {
@@ -344,7 +344,7 @@
               }
 
               &::after {
-                content: "";
+                content: '';
                 display: block;
                 width: 18px;
                 height: 22px;
@@ -403,7 +403,7 @@
       color: #ffffff;
 
       &::before {
-        content: "";
+        content: '';
         display: block;
         width: 30px;
         height: 24px;
