stori ai refactor

--- a/src/core/header/header.scss
+++ b/src/core/header/header.scss
@@ -1,5 +1,5 @@
 #header {
-  background-color: #552f7c;
+  background-color: #62718e;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -49,13 +49,13 @@
       outline: none;
       background-color: #ffffff;
       border-radius: 12px;
-      color: #552f7c;
+      color: #62718e;
       text-decoration: none;
     }
 
     .logbtn {
       background-color: transparent;
-      color: #06c97e;
+      color: #63bdc6;
       margin-right: 40px;
       padding: 0;
       @media screen and (max-width: 1060px) {
