--- a/src/feature/policy/Policy.scss
+++ b/src/feature/policy/Policy.scss
@@ -1,13 +1,13 @@
 #policy {
   display: flex;
   flex-direction: column;
-  background-color: #552f7c;
+  background-color: #62718e;
   padding: 100px 50px;
   h2 {
     font-size: 49px;
     font-weight: bold;
     line-height: 59px;
-    color: #06c97e;
+    color: #63bdc6;
   }
   p {
     margin-top: 40px;
