--- a/src/shared/radio/Radio.scss
+++ b/src/shared/radio/Radio.scss
@@ -13,7 +13,7 @@ i.radio-button {
     position: absolute;
     width: 0;
     height: 0;
-    background-color: #06c97e;
+    background-color: #63bdc6;
     border-radius: 50%;
     transition: 0.3s all;
   }
