--- a/src/shared/siteready/siteReady.scss
+++ b/src/shared/siteready/siteReady.scss
@@ -1,9 +1,9 @@
 #siteReady {
   h2 {
-    font-family: "FiraGO";
+    font-family: 'FiraGO';
     font-weight: 700;
     line-height: 78px;
-    color: #06c97e;
+    color: #63bdc6;
     text-align: center;
 
     span {
