--- a/src/core/footer/footer.scss
+++ b/src/core/footer/footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #49365d;
+  background-color: darken(#62718e, 8);
   @media screen and (max-width: 800px) {
     flex-direction: column;
     text-align: center;
@@ -10,7 +10,7 @@
   .icons {
     display: flex;
     i {
-      color: #707070;
+      color: #ffffff;
       font-size: 30px;
       margin-right: 37px;
     }
@@ -35,20 +35,20 @@
           margin-bottom: 10px;
         }
         a {
-          font-family: "Helvetica";
+          font-family: 'Helvetica';
           font-weight: 400;
           font-size: 18px;
-          color: #707070;
+          color: #ffffff;
           text-decoration: none;
           text-transform: capitalize;
         }
       }
     }
     span {
-      font-family: "Helvetica";
+      font-family: 'Helvetica';
       font-weight: 400;
       font-size: 18px;
-      color: #707070;
+      color: #ffffff;
       text-decoration: none;
     }
   }
