--- a/src/feature/auth/components/remember/Remember.scss
+++ b/src/feature/auth/components/remember/Remember.scss
@@ -15,7 +15,7 @@
   a {
     font-weight: bold;
     font-size: 12px;
-    color: #552f7c;
+    color: #62718e;
     text-decoration: underline;
   }
 }
