--- a/src/feature/dashboard/createOrEdit/CreateOrEdit.scss
+++ b/src/feature/dashboard/createOrEdit/CreateOrEdit.scss
@@ -49,7 +49,7 @@
         button {
           cursor: pointer;
           width: 70px;
-          background-color: #06c97e;
+          background-color: #63bdc6;
           border-radius: 0 12px 12px 0;
           border: none;
           outline: none;
@@ -74,7 +74,7 @@
           }
 
           &.publish {
-            background-color: #06c97e;
+            background-color: #63bdc6;
             max-width: 270px;
 
             @media screen and (max-width: 1060px) {
@@ -138,7 +138,7 @@
       }
 
       .generImg {
-        background-color: #552f7c;
+        background-color: #62718e;
         padding-top: 20px;
         padding-bottom: 20px;
         display: flex;
@@ -302,11 +302,11 @@
             border-radius: 0 12px 12px 0;
             font-weight: bold;
             color: #ffffff;
-            background-color: #06c97e;
+            background-color: #63bdc6;
 
             &:disabled {
               cursor: default;
-              background-color: rgba(#06c97e, 0.7);
+              background-color: rgba(#63bdc6, 0.7);
             }
           }
         }
@@ -336,6 +336,8 @@
           border-radius: 12px;
 
           textarea {
+            font-family: Roboto;
+            font-size: 16px;
             width: 100%;
             border: none;
             outline: none;
@@ -494,7 +496,7 @@
       display: flex;
       align-items: center;
       cursor: pointer;
-      background-color: #06c97e;
+      background-color: #63bdc6;
       border: none;
       outline: none;
       border-radius: 12px;
