--- a/src/feature/main/Main.scss
+++ b/src/feature/main/Main.scss
@@ -1,5 +1,5 @@
 #mainpage {
-  background-color: #552f7c;
+  background-color: #62718e;
   display: flex;
   flex-direction: column;
 
@@ -26,7 +26,7 @@
         font-weight: bold;
         line-height: 59px;
         font-size: 49px;
-        color: #06c97e;
+        color: #63bdc6;
         display: flex;
         flex-direction: column;
 
@@ -42,7 +42,7 @@
         margin: 44px 0;
       }
       a {
-        background-color: #06c97e;
+        background-color: #63bdc6;
         border: none;
         outline: none;
         border-radius: 12px;
@@ -80,7 +80,7 @@
 
         &::before {
           content: url(../../assets/svg/check.svg);
-          background-color: #06c97e;
+          background-color: #63bdc6;
           padding: 10px;
           border-radius: 50%;
           margin-right: 12px;
@@ -106,7 +106,7 @@
         font-weight: bold;
         max-width: 90%;
         line-height: 59px;
-        color: #06c97e;
+        color: #63bdc6;
         margin-bottom: 45px;
       }
       p {
@@ -153,7 +153,7 @@
         font-weight: bold;
         max-width: 80%;
         line-height: 59px;
-        color: #552f7c;
+        color: #62718e;
         margin-bottom: 45px;
         @media screen and (max-width: 999px) {
           font-size: 40px;
@@ -218,7 +218,7 @@
     }
   }
   .section-5 {
-    background-color: #552f7c;
+    background-color: #62718e;
     width: 100%;
     .leftContent {
       display: flex;
@@ -240,7 +240,7 @@
           margin-bottom: 10px;
         }
         button {
-          background-color: #06c97e;
+          background-color: #63bdc6;
           border: none;
           outline: none;
           border-radius: 12px;
