--- a/src/shared/card/card.scss
+++ b/src/shared/card/card.scss
@@ -27,7 +27,7 @@
         line-height: 21px;
         padding: 20px 0;
         text-align: center;
-        color: #06c97e;
+        color: #63bdc6;
         text-transform: capitalize;
         background-color: #fff;
         border-radius: 12px;
@@ -36,7 +36,7 @@
         bottom: -20px;
         left: 20px;
         min-width: 105px;
-        box-shadow: 0 3px 20px rgba(#552f7c, 0.2);
+        box-shadow: 0 3px 20px rgba(#62718e, 0.2);
       }
     }
   }
@@ -56,7 +56,7 @@
 
       &::after {
         content: '';
-        border-bottom: 1px solid #06c97e;
+        border-bottom: 1px solid #63bdc6;
         padding-top: 7px;
         display: flex;
         max-width: 90px;
@@ -104,7 +104,7 @@
 
         &:nth-child(2) {
           &:hover {
-            background-color: #06c97e;
+            background-color: #63bdc6;
             color: #fff;
 
             &::before {
