--- a/src/shared/form/form.scss
+++ b/src/shared/form/form.scss
@@ -8,7 +8,7 @@
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 20px;
-    color: #552f7c;
+    color: #62718e;
     padding-bottom: 20px;
     border-bottom: 1px solid #eeecf1;
   }
@@ -26,7 +26,7 @@
     }
 
     .submit-button {
-      background-color: #552f7c;
+      background-color: #62718e;
       border-radius: 12px;
       padding: 15px 0;
       margin-bottom: 20px;
@@ -36,7 +36,7 @@
       background-color: #eeecf1;
       border-radius: 12px;
       padding: 15px 0;
-      color: #552f7c;
+      color: #62718e;
       font-size: 16px;
       font-family: 'FiraGO';
       font-weight: bold;
@@ -65,7 +65,7 @@
       font-weight: bold;
       font-size: 12px;
       line-height: 16px;
-      color: #552f7c;
+      color: #62718e;
     }
 
     .PrivateSwitchBase-root-5 {
