--- a/src/feature/dashboard/Dashboard.scss
+++ b/src/feature/dashboard/Dashboard.scss
@@ -226,7 +226,7 @@
   }
   .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     gap: 20px;
     margin-top: 76px;
 
