--- a/src/shared/card/card.scss
+++ b/src/shared/card/card.scss
@@ -19,8 +19,12 @@
     }
     .imgwraper {
       position: relative;
+      height: 300px;
+
       img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
       span {
         font-size: 16px;
@@ -83,7 +87,7 @@
         width: 100%;
 
         &:nth-child(1) {
-          margin-right: 20px;
+          // margin-right: 20px;
 
           &:hover {
             background-color: #ff9002;
