--- a/src/feature/dashboard/Dashboard.scss
+++ b/src/feature/dashboard/Dashboard.scss
@@ -113,6 +113,7 @@
       outline: none;
       font-size: 16px;
       float: left;
+      min-width: 200px;
       width: 80%;
       border-radius: 12px 0 0 12px;
       cursor: pointer;
